agregamos el css

--- a/Formulario/index.html
+++ b/Formulario/index.html
@@ -10,7 +10,7 @@ br
 
 <body>
     <p>Formulario de Registros Basicos</p>
-    <h1>Favor de llenar el Formulario</h1>
+    <h1>Favor de Llenar el Formulario</h1>
     <form action="" method="get" name="formulario">
         <br> Nombre: <input type="text" name="nombre" size="20">
         <br> Edad: <input type="number" min="00" max="99" name="edad">
