--- a/Formulario/index.html
+++ b/Formulario/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script language="javascript" type="text/javascript" src="js/validacion.js"></script>
     <title>Formulario</title>
 </head>
 
