--- a/Formulario/index.html
+++ b/Formulario/index.html
@@ -12,7 +12,7 @@
 <body>
     <p>Formulario de Registros Basicos</p>
     <h1>Favor de Llenar el Formulario</h1>
-    <form action="" method="get" name="formulario">
+    <form action="" method="get" name="formulario" onsubmit="return validar(this)">
         <br> Nombre: <input type="text" name="nombre" size="20">
         <br> Edad: <input type="number" min="00" max="99" name="edad">
         <br> Email: <input type="emial" name="correo" size="30">
