--- a/Formulario/index.html
+++ b/Formulario/index.html
@@ -16,6 +16,7 @@
         <br> Nombre: <input type="text" name="nombre" size="20">
         <br> Edad: <input type="number" min="00" max="99" name="edad">
         <br> Email: <input type="emial" name="correo" size="30">
+        <br> Fecha: <input type="date" name="fecha">
         <br>
         <input type="submit" value="Enviar Datos" name="enviar">
         <input type="reset" value="Borrar Datos" name="borrar">
