--- a/Formulario/index.html
+++ b/Formulario/index.html
@@ -15,7 +15,7 @@
     <form action="" method="get" name="formulario" onsubmit="return validar(this)">
         <br> Nombre: <input type="text" name="nombre" size="20">
         <br> Edad: <input type="number" min="00" max="99" name="edad">
-        <br> Email: <input type="emial" name="correo" size="30">
+        <br> Email: <input type="email" name="correo" size="30">
         <br> Fecha: <input type="date" name="fecha">
         <br>
         <input type="submit" value="Enviar Datos" name="enviar">
