creacion de porcentaje.html, valPorcentaje.js y style.css

--- a/Formulario/index.html
+++ b/Formulario/index.html
@@ -18,6 +18,8 @@
         <br> Email: <input type="email" name="correo" size="30">
         <br> Fecha: <input type="date" name="fecha">
         <br>
+        <A href="porcentaje.html">Porcentaje de hombre y mujeres de un grupo</A>
+        <br>
         <input type="submit" value="Enviar Datos" name="enviar">
         <input type="reset" value="Borrar Datos" name="borrar">
     </form>
