codigo para valPorcentaj.js1

--- a/Formulario/porcentaje.html
+++ b/Formulario/porcentaje.html
@@ -11,8 +11,9 @@
 
 <body>
     <form action="" method="get" name="formulario" onsubmit="return valPorcentaje(this)">
-        <br> Hombres: <input type="number" min="00" max="99" name="hombres">
-        <br> Mujeres: <input type="number" min="00" max="99" name="mujeres">
+        <p>Escriba el numero de hombres y mujeres</p>
+        <br> Hombres: <input type="number" min="00" name="hombres">
+        <br> Mujeres: <input type="number" min="00" name="mujeres">
         <br>
         <input type="submit" value="Enviar Datos" name="enviar">
         <input type="reset" value="Borrar Datos" name="borrar">
