validacion de porcentaje correcta

--- a/Formulario/porcentaje.html
+++ b/Formulario/porcentaje.html
@@ -10,8 +10,11 @@
 </head>
 
 <body>
-    <form action="" method="get" name="formulario" onsubmit="return valPorcentaje(this)">
-        <p>Escriba el numero de hombres y mujeres</p>
+    <form action="" method="post" name="formulario" onsubmit="return valPorcentaje(this)">
+        <p>
+            <h1>Escriba el numero de hombres y mujeres</h1>
+        </p>
+        <p>Escriba dentro de cada campo 3 digitos</p>
         <br> Hombres: <input type="number" min="00" name="hombres">
         <br> Mujeres: <input type="number" min="00" name="mujeres">
         <br>
