creacion de edad.html, validacionEdad.js y styleEdad.css

--- a/Formulario/index.html
+++ b/Formulario/index.html
@@ -19,6 +19,7 @@
         <br> Fecha: <input type="date" name="fecha">
         <br>
         <A href="porcentaje.html">Porcentaje de hombre y mujeres de un grupo</A>
+        <A href="edad.html">Edad de una Persona</A>
         <br>
         <input type="submit" value="Enviar Datos" name="enviar">
         <input type="reset" value="Borrar Datos" name="borrar">
