funcion de edad

--- a/Formulario/edad.html
+++ b/Formulario/edad.html
@@ -14,7 +14,7 @@
         <p>
             <h1>Escriba su edad</h1>
         </p>
-        <br> Fecha: <input type="date" name="fecha">
+        <br> Fecha: <input type="date" name="fecha" min="1900-01-01" max="2020-12-31">
         <br>
         <input type="submit" value="Enviar Datos" name="enviar">
         <input type="reset" value="Borrar Datos" name="borrar">
