--- a/Formulario/index.html
+++ b/Formulario/index.html
@@ -16,9 +16,10 @@
         <br> Nombre: <input type="text" name="nombre" size="20">
         <br> Edad: <input type="number" min="00" max="99" name="edad">
         <br> Email: <input type="email" name="correo" size="30">
-        <br> Fecha: <input type="date" name="fecha">
+        <br> Fecha: <input type="date" name="fecha" min="1900-01-01" max="2020-12-31">
         <br>
         <A href="porcentaje.html">Porcentaje de hombre y mujeres de un grupo</A>
+        <br>
         <A href="edad.html">Edad de una Persona</A>
         <br>
         <input type="submit" value="Enviar Datos" name="enviar">
