--- a/Formulario/index.html
+++ b/Formulario/index.html
@@ -22,6 +22,8 @@
         <br>
         <A href="edad.html">Edad de una Persona</A>
         <br>
+        <A href="../Funciones/index.html">Pagina de Funciones</A>
+        <br>
         <input type="submit" value="Enviar Datos" name="enviar">
         <input type="reset" value="Borrar Datos" name="borrar">
     </form>
