--- a/Formulario/funciones.html
+++ b/Formulario/funciones.html
@@ -46,7 +46,7 @@
                 </td>
             </tr>
             <td>
-                <A href="index.html">Regresar</A>
+                <A href="INDEX.html">Regresar</A>
             </td>
 
 
