--- a/Formulario/edad.html
+++ b/Formulario/edad.html
@@ -18,7 +18,7 @@
         <br>
         <input type="submit" value="Enviar Datos" name="enviar">
         <input type="reset" value="Borrar Datos" name="borrar">
-        <A href="index.html">Regresar</A>
+        <A href="INDEX.html">Regresar</A>
 </body>
 
 </html>
