--- a/Formulario/porcentaje.html
+++ b/Formulario/porcentaje.html
@@ -20,7 +20,7 @@
         <br>
         <input type="submit" value="Enviar Datos" name="enviar">
         <input type="reset" value="Borrar Datos" name="borrar">
-        <A href="index.html">Regresar</A>
+        <A href="INDEX.html">Regresar</A>
     </form>
 </body>
 
