--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Algoritmia Parte 1</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <script language="javascript" type="text/javascript" src="js/logic.js"></script>
 </head>
 
 <body>
@@ -15,7 +16,7 @@
             <h4>Dada una lista de palabras separadas por un espacio, invierte el orden de dichas palabras. Las palabras solo pueden estar separadas por un espacio.</h4>
             <div class="problema-content">
                 <input type="text" class="problema-input" placeholder="Ingresa las palabras separadas por un espacio:" id="p1-input">
-                <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="">Invertir</button>
+                <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="problema1()">Invertir</button>
                 <pre class="problema-output" id="p1-output">Esperando input...</pre>
             </div>
         </div>
