se grega funcion 3

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         </tbody>
                     </table>
                 </div>
-                <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="">Calcular</button>
+                <button type="button" class="problema-button" style="margin-top: 1rem;" onclick="problema2()">Calcular</button>
                 <pre class="problema-output" id="p2-output">Esperando input...</pre>
             </div>
         </div>
