--- a/funciones.html
+++ b/funciones.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/styleFun.css">
+    <link rel="stylesheet" href="css/styleEdad.css">
 </head>
 
 <body>
@@ -46,7 +46,7 @@
                 </td>
             </tr>
             <td>
-                <A href="INDEX.html">Regresar</A>
+                <A href="index.html">Regresar</A>
             </td>
 
 
