ya quedo por fin 1

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <p>Formulario de Registros Basicos</p>
+    <p>Formulario de Registros Basicos..</p>
     <h1>Favor de Llenar el Formulario</h1>
     <form action="" method="get" name="formulario" onsubmit="return validar(this)">
         <br> Nombre: <input type="text" name="nombre" size="20">
