se adjunta todo

--- a/funciones.html
+++ b/funciones.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/styleEdad.css">
+    <link rel="stylesheet" href="css/estiloFun.css">
 </head>
 
 <body>
@@ -45,6 +45,12 @@
                     <input type="button" name="borrar" value="Borrar" onclick="borrar1()">
                 </td>
             </tr>
+            <td>
+                <A href="INDEX.html">Regresar</A>
+            </td>
+
+
+
 
         </table>
 
