se sube a gitHub

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <br>
         <A href="funciones.html">Pagina de Funciones</A>
         <br>
+        <A href="algoritmia.html">Algoritmia</A>
+        <br>
         <input type="submit" value="Enviar Datos" name="enviar">
         <input type="reset" value="Borrar Datos" name="borrar">
     </form>
