--- a/algoritmia.html
+++ b/algoritmia.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Algoritmia Parte 1</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <script language="javascript" type="text/javascript" src="js/logic.js"></script>
+    <link rel="stylesheet" href="css/styleAlgoritmia.css">
+    <script language="javascript" type="text/javascript" src="js/logicAlgoritmia.js"></script>
 </head>
 
 <body>
